src/objects/skuid__Personalization_Settings__c.object
<CustomObject>
    <fields>
        <fullName>skuid__Page__c</fullName>
        <description>The page on which this component was created.</description>
        <label>Page</label>
        <referenceTo>skuid__Page__c</referenceTo>
        <relationshipLabel>Personalization Settings</relationshipLabel>
        <relationshipName>Personalization_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>skuid__Settings__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <description>A JSON string representing the settings for a specific instance of a component.</description>
        <inlineHelpText>A JSON string representing the settings for a specific instance of a component.</inlineHelpText>
        <label>Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>skuid__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Personalization_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Personalization Setting</label>
    <nameField>
        <displayFormat>skPS-{0}</displayFormat>
        <label>Setting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personalization Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>